2012-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (h_var): Eliminated uses of rl function, in favor of
	rlcp. Only the parser should use rl to establish location info.

2012-02-24  Kaz Kylheku  <kaz@kylheku.com>

	First cut at @(load) directive. Incomplete: debug location info
	needs to record file name, not only line number; absolute paths
	not handled, etc.

	* match.c (load_s): New symbol variable.
	(v_load): New static function.
	(syms_init): load_s initialized.
	(dir_tables_init): Load directive registered.

	* match.h (load_s): Declared.

	* parser.h (parse_reset): New function declared.

	* parser.l (spec_file_str): Global variable moved from txr.c.
	(parse_reset): New function.

	* parser.y (clause): Special handling for @(load ...) directive.
	parent file path inserted into the syntax at parse time,
	so when the load directive executes, it can load the file from
	the same directory as the parent file.

	* txr.c (spec_file_str): Global variable moved to parser.l.

2012-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* tests/010/seq.txr: New file.

	* tests/010/seq.expected: New file.

2012-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (sub_list, replace_list, lazy_sub_str, sub_str,
	replace_str, sub_vec, replace_vec): Implementing floating zero
	behavior. This is necessary so that the important case index .. (+
	index 1) for selecting one element as a subrange works even if index is
	negative.

	* txr.1: Floating zero behavior for ranges documented.

2012-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (dwim_loc): del operator's return value is the
	deleted range of values. Missing del cases added for single
	index cases.

	* lib.c (quicksort): Fix pivot selection one more time.
	(length): Fix bad argument in "not a sequence" error.

2012-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (quicksort): Incorrect pivot selection.

2012-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (del_s): New symbol variable.